# guap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.org  mypy.ini  pyproject.toml  setup.py  tox.ini
guap/metrics/: __init__.py  classification.py
requirements/: dev.txt  prod.txt
tests/test_metrics/: test_classification.py
