[tool.poetry]
name = "guap-py"
version = "0.1.0"
description = ""
authors = ["Cyuss <maamra.youcef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
tox = "^3.23.0"
radon = "^4.5.0"
cloc = "^0.2.5"
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
